# JSON_Lib

./: .gitignore  CMakeLists.txt  Doxyfile  EMBEDDED_REFACTOR_PLAN.md  JSONConfig.h.in  JSON_Config.h.in  Jenkinsfile  LICENSE.txt  PHASE1_BASELINE.md  README.md  REFRACTOR_PLAN.md  notes.txt  stdafx.h
examples/: Analyze_JSON_File.cpp  CMakeLists.txt  JSON_Analyze_File.cpp  JSON_Convert_File.cpp  JSON_Convert_Numbers.cpp  JSON_Create_At_Runtime.cpp  JSON_Display_Settings.cpp  JSON_Fibonacci.cpp  JSON_Fibonaci.cpp  JSON_Files_To_Bencode.cpp  JSON_Files_To_XML.cpp  JSON_Index_File.cpp  JSON_Parse_File.cpp  JSON_Strip_In_Place.cpp  JSON_Strip_Whitespace.cpp  JSON_Toggle_Setting.cpp  Parse_JSON_Files.cpp  parse_json_file.cpp  parse_json_files.cpp
examples/files/: settings.json  testfile002.json
examples/include/: JSON_Analyzer.hpp  JSON_Convert.hpp  JSON_Convert_Numbers.hpp  JSON_Indexer.hpp  JSON_Utility.hpp  Utility.hpp
examples/source/: JSON_Analyze_File.cpp  JSON_Config_Loader.cpp  JSON_Convert_File.cpp  JSON_Create_At_Runtime.cpp  JSON_Custom_Struct_Serialization.cpp  JSON_Deep_Search.cpp  JSON_Display_Settings.cpp  JSON_Embedded_Buffer_API.cpp  JSON_Error_Handling.cpp  JSON_Fibonacci.cpp  JSON_Files_To_Bencode.cpp  JSON_Files_To_XML.cpp  JSON_Files_To_YAML.cpp  JSON_HTTP_Integration.cpp  JSON_Index_File.cpp  JSON_Parse_File.cpp  JSON_Patch_Merge.cpp  JSON_Pretty_Print.cpp  JSON_Schema_Validation.cpp  JSON_Stream_Large_File.cpp  JSON_Strip_Whitespace.cpp  JSON_Toggle_Setting.cpp  JSON_Unicode_Support.cpp
tests/: CMakeLists.txt  JSONLIb_Tests_ISource.cpp  JSONLib_Tests.hpp  JSONLib_Tests_Helper.cpp  JSONLib_Tests_IDestination.cpp  JSONLib_Tests_JNode.cpp  JSONLib_Tests_JNodeNumber.cpp  JSONLib_Tests_JNode_Number.cpp  JSONLib_Tests_JSON.cpp  JSONLib_Tests_JSON_Creation.cpp  JSONLib_Tests_Main.cpp  JSONLib_Tests_Misc.cpp  JSONLib_Tests_Parse.cpp  JSONLib_Tests_Parse_Collection.cpp  JSONLib_Tests_Parse_Escapes.cpp  JSONLib_Tests_Parse_Exceptions.cpp  JSONLib_Tests_Parse_Misc.cpp  JSONLib_Tests_Parse_Simple.cpp  JSONLib_Tests_Parse_Whitespace.cpp  JSONLib_Tests_Print.cpp  JSONLib_Tests_Stringify.cpp  JSONLib_Tests_Stringify_Collection.cpp  JSONLib_Tests_Stringify_Escapes.cpp  JSONLib_Tests_Stringify_Exceptions.cpp  JSONLib_Tests_Stringify_Misc.cpp  JSONLib_Tests_Stringify_Simple.cpp  JSONLib_tests.hpp  JSONLib_tests_helper.cpp  JSONLib_tests_main.cpp  JSONLib_tests_parse.cpp  JSONLib_tests_stringify.cpp  JSON_Lib_Tests_Helper.cpp  JSON_Lib_Tests_IDestination.cpp  JSON_Lib_Tests_Misc.cpp  JSON_Lib_Tests_Parse_Exceptions.cpp  JSON_Lib_Tests_Print.cpp  JSON_Lib_Tests_Stringify_Collection.cpp  JSON_Lib_Tests_Stringify_Exceptions.cpp  JSON_Lib_Tests_Stringify_Misc.cpp  JSON_Lib_Tests_Stringify_Simple.cpp  (+6 more)
tests/files/: testfile002.json  testfile003.json  testfile004.json  testfile005.json  testfile012.json  testfile013.json  testfile027.json
tests/include/: JSON_Lib_Tests.hpp
tests/include/mocks/: Mock_Action.hpp  Mock_Parser.hpp  Mock_Stringify.hpp
tests/io/: JSON_LIb_Tests_ISource.cpp  JSON_Lib_Tests_File.cpp  JSON_Lib_Tests_IDestination.cpp  JSON_Lib_Tests_ISource.cpp
tests/jnode/: JSON_Lib_Tests_JNode.cpp  JSON_Lib_Tests_JNode_Number.cpp
tests/json/: JSON_Lib_Tests_JSON.cpp
tests/misc/: JSON_Lib_Tests_Helper.cpp  JSON_Lib_Tests_JSON.cpp  JSON_Lib_Tests_Misc.cpp
tests/parse/: JSON_Lib_Tests_Parse_Collection.cpp  JSON_Lib_Tests_Parse_Escapes.cpp  JSON_Lib_Tests_Parse_Exceptions.cpp  JSON_Lib_Tests_Parse_Misc.cpp  JSON_Lib_Tests_Parse_Simple.cpp  JSON_Lib_Tests_Parse_Whitespace.cpp
tests/source/benchmark/: JSON_Lib_Tests_Benchmark.cpp
tests/source/io/: JSON_Lib_Tests_EmbeddedJSON.cpp  JSON_Lib_Tests_File.cpp  JSON_Lib_Tests_File_FromFile.cpp  JSON_Lib_Tests_File_GetFormat.cpp  JSON_Lib_Tests_File_ToFile.cpp  JSON_Lib_Tests_IDestination.cpp  JSON_Lib_Tests_IDestination_Buffer.cpp  JSON_Lib_Tests_IDestination_File.cpp  JSON_Lib_Tests_IDestination_FixedBuffer.cpp  JSON_Lib_Tests_ISource.cpp  JSON_Lib_Tests_ISource_Buffer.cpp  JSON_Lib_Tests_ISource_File.cpp
tests/source/jnode/: JSON_Lib_Tests_JNode.cpp  JSON_Lib_Tests_JNode_Assignment.cpp  JSON_Lib_Tests_JNode_Construct.cpp  JSON_Lib_Tests_JNode_Indexing.cpp  JSON_Lib_Tests_JNode_Number.cpp  JSON_Lib_Tests_JNode_Reference.cpp
tests/source/json/: JSON_Lib_Tests_JSON.cpp  JSON_Lib_Tests_JSON_Create_Array.cpp  JSON_Lib_Tests_JSON_Create_Complex.cpp  JSON_Lib_Tests_JSON_Create_Simple.cpp
tests/source/misc/: JSON_Lib_Tests_DRY_Regression.cpp  JSON_Lib_Tests_Helper.cpp  JSON_Lib_Tests_Misc.cpp
tests/source/node/: JSON_Lib_Tests_Node_Assignment.cpp  JSON_Lib_Tests_Node_Construct.cpp  JSON_Lib_Tests_Node_Indexing.cpp  JSON_Lib_Tests_Node_Reference.cpp
tests/source/number/: JSON_Lib_Tests_JNode_Number.cpp  JSON_Lib_Tests_JNode_Number_Assignment.cpp  JSON_Lib_Tests_JNode_Number_Conversion.cpp  JSON_Lib_Tests_JNode_Number_Misc.cpp  JSON_Lib_Tests_JNode_Number_Notation.cpp  JSON_Lib_Tests_JNode_Number_Precision.cpp  JSON_Lib_Tests_Node_Number_Assignment.cpp  JSON_Lib_Tests_Node_Number_Conversion.cpp  JSON_Lib_Tests_Node_Number_Misc.cpp  JSON_Lib_Tests_Node_Number_Notation.cpp  JSON_Lib_Tests_Node_Number_Precision.cpp
tests/source/parse/: JSON_Lib_Tests_Parse_Collection.cpp  JSON_Lib_Tests_Parse_Escapes.cpp  JSON_Lib_Tests_Parse_Exceptions.cpp  JSON_Lib_Tests_Parse_Large.cpp  JSON_Lib_Tests_Parse_Misc.cpp  JSON_Lib_Tests_Parse_Simple.cpp  JSON_Lib_Tests_Parse_Whitespace.cpp
tests/source/stringify/: JSON_Lib_Tests_Print.cpp  JSON_Lib_Tests_Stringify_Bencode.cpp  JSON_Lib_Tests_Stringify_Collection.cpp  JSON_Lib_Tests_Stringify_Escapes.cpp  JSON_Lib_Tests_Stringify_Exceptions.cpp  JSON_Lib_Tests_Stringify_Misc.cpp  (+5 more)
tests/stringify/: JSON_Lib_Tests_Print.cpp  JSON_Lib_Tests_Stringify_Bencode.cpp  JSON_Lib_Tests_Stringify_Collection.cpp  JSON_Lib_Tests_Stringify_Escapes.cpp  JSON_Lib_Tests_Stringify_Exceptions.cpp  JSON_Lib_Tests_Stringify_Misc.cpp  JSON_Lib_Tests_Stringify_Simple.cpp  JSON_Lib_Tests_Stringify_XML.cpp
tests/testData/: testfile012.json  testfile013.json
tests/traverse/: JSON_Lib_Tests_Traverse.cpp
(+208 files in other folders)
